language-server/src/tests/snapshots/gleam_language_server__tests__action__wrap_case_assignment_of_record_access_in_block.snap
---
source: language-server/src/tests/action.rs
expression: "\npub type Record {\n  R(left: Int, right: Int)\n}\n\npub fn main() {\n  let r = R(1, 2)\n  let l = r.left\n  l\n}\n"
---
----- BEFORE ACTION

pub type Record {
  R(left: Int, right: Int)
}

pub fn main() {
  let r = R(1, 2)
  let l = r.left
            ↑   
  l
}


----- AFTER ACTION

pub type Record {
  R(left: Int, right: Int)
}

pub fn main() {
  let r = R(1, 2)
  let l = {
    r.left
  }
  l
}
