language-server/src/tests/snapshots/gleam_language_server__tests__action__wrap_case_clause_in_block.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn f(option) {\n  case option {\n    Some(content) -> content\n    None -> panic\n  }\n}"
---
----- BEFORE ACTION

pub fn f(option) {
  case option {
    Some(content) -> content
                     ↑      
    None -> panic
  }
}


----- AFTER ACTION

pub fn f(option) {
  case option {
    Some(content) -> {
      content
    }
    None -> panic
  }
}
