language-server/src/tests/snapshots/gleam_language_server__tests__action__wrap_case_clause_with_multiple_patterns_in_block.snap
---
source: language-server/src/tests/action.rs
expression: "pub type PokemonType {\n  Air\n  Water\n  Fire\n}\n\n  pub fn f(pokemon_type: PokemonType) {\n    case pokemon_type {\n      Water | Air -> soak()\n      Fire -> burn()\n    }\n  }"
---
----- BEFORE ACTION
pub type PokemonType {
  Air
  Water
  Fire
}

  pub fn f(pokemon_type: PokemonType) {
    case pokemon_type {
      Water | Air -> soak()
                     ↑     
      Fire -> burn()
    }
  }


----- AFTER ACTION
pub type PokemonType {
  Air
  Water
  Fire
}

  pub fn f(pokemon_type: PokemonType) {
    case pokemon_type {
      Water | Air -> {
        soak()
      }
      Fire -> burn()
    }
  }
