language-server/src/tests/snapshots/gleam_language_server__tests__action__wrap_in_result_constructor_suggest_wrapping_in_error.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() -> Result(Int, Nil) { Nil }"
---
----- BEFORE ACTION
pub fn main() -> Result(Int, Nil) { Nil }
                                    ↑    


----- AFTER ACTION
pub fn main() -> Result(Int, Nil) { Error(Nil) }
