language-server/src/tests/snapshots/gleam_language_server__tests__action__wrap_in_result_constructor_suggests_wrapping_in_ok.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() -> Result(Int, Nil) { 2 }"
---
----- BEFORE ACTION
pub fn main() -> Result(Int, Nil) { 2 }
                                    ↑  


----- AFTER ACTION
pub fn main() -> Result(Int, Nil) { Ok(2) }
