language-server/src/tests/snapshots/gleam_language_server__tests__action__wrap_nested_case_clause_in_block.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn f(result) {\n  case result {\n    Ok(reresult) -> {\n      case reresult {\n        Ok(w) -> w\n        Error(_) -> panic\n      }\n    }\n    Error(_) -> panic\n  }\n}"
---
----- BEFORE ACTION

pub fn f(result) {
  case result {
    Ok(reresult) -> {
      case reresult {
        Ok(w) -> w
                 ↑
        Error(_) -> panic
      }
    }
    Error(_) -> panic
  }
}


----- AFTER ACTION

pub fn f(result) {
  case result {
    Ok(reresult) -> {
      case reresult {
        Ok(w) -> {
          w
        }
        Error(_) -> panic
      }
    }
    Error(_) -> panic
  }
}
